<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.thesim.simsimulator.LoginFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView android:id="@+id/login_logo"
                android:src="@drawable/app_logo_simple"
                android:contentDescription="@string/logo_description"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal" />

            <EditText android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:fontFamily="sans-serif"
                android:inputType="textEmailAddress"
                android:textColor="@color/fontLessDark"
                android:textColorHint="@color/fontLessDark"
                android:hint="@string/hint_email" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:fontFamily="sans-serif"
                    android:hint="@string/hint_password"
                    android:textColor="@color/fontLessDark"
                    android:textColorHint="@color/fontLessDark"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:background="@color/colorAccent"
                android:textColor="@color/offWhite"
                android:text="@string/login"/>

            <TextView android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/redirect_signup"
                android:gravity="center"
                android:textColor="@color/fontLessDark"
                android:textSize="16sp"/>

            <TextView android:id="@+id/link_forget"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/redirect_forget"
                android:gravity="center"
                android:textColor="@color/fontLessDark"
                android:textSize="16sp"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
